[gd_scene load_steps=18 format=2]

[ext_resource path="res://Enemies/demon_medium_2.png" type="Texture" id=1]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Effects/Blink.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=10]
shader = ExtResource( 5 )
shader_param/active = false

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Idle",
"speed": 8.0
}, {
"frames": [ SubResource( 9 ) ],
"loop": true,
"name": "Hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 4.0
height = 6.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 5.0
height = 4.97001

[sub_resource type="Animation" id=11]
resource_name = "Start"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=12]
resource_name = "Stop"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 10 )
position = Vector2( 0, -16 )
frames = SubResource( 5 )
animation = "Hurt"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7 )
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
visible = false
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -8 )
shape = SubResource( 7 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -7.5 )
shape = SubResource( 8 )

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="."]
anims/Start = SubResource( 11 )
anims/Stop = SubResource( 12 )
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="." method="_on_Hurtbox_invincibility_started"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
